fix tab button wrap

--- a/client/assets/styles/scss/modals/modals-edit-server.scss
+++ b/client/assets/styles/scss/modals/modals-edit-server.scss
@@ -63,7 +63,7 @@
     margin-bottom: 6px;
     padding: 0 9px;
     white-space: normal;
-    width: 108px;
+    width: 105px;
 
     .btn-text {
       display: inline-block;
